# My-CertoraParser

./: AST.cpp  AST.hpp  CMakeLists.txt  Certora.g4  README.md  V.cpp  V.hpp  Visitor.cpp  Visitor.hpp  main.cpp  notes.md
Vat/: Vat.spec  Vat_supported.spec
cmake/: ExternalAntlr4Cpp.cmake
expected_output/: cage.v  cage_revert_nece.v  cage_revert_suff.v  deny.v  deny_revert_nece.v  deny_revert_suff.v  file.v  file_ilk.v  file_ilk_revert_nece.v  file_ilk_revert_suff.v  file_revert_nece.v  file_revert_suff.v  flux.v  flux_revert_nece.v  flux_revert_suff.v  fold.v  fold_revert_nece.v  fold_revert_suff.v  fork.v  fork_revert_nece.v  fork_revert_suff.v  frob.v  frob_revert_nece.v  frob_revert_suff.v  grab.v  grab_revert_nece.v  grab_revert_suff.v  heal.v  heal_revert_nece.v  heal_revert_suff.v  hope.v  hope_revert_nece.v  hope_revert_suff.v  init.v  init_revert_nece.v  init_revert_suff.v  move.v  move_revert_nece.v  move_revert_suff.v  nope.v  (+11 more)
